--- a/webifyv2/src/App.css
+++ b/webifyv2/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   height: 100vh;
   width: 100hw;
-  background-color: black;
+  background-color: #212121;
   color: white;
 }
 
